<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.deividasstr.domain.enums.MeasurementUnit" />

        <variable
            name="viewmodel"
            type="com.deividasstr.ui.features.sweetdetails.SweetDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_amount_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/consumed_sweet_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@={viewmodel.enteredValue}" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/measure_unit_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@{viewmodel.measureUnitGrams() ? @id/measure_grams : @id/measure_ounces}"
            android:onCheckedChanged="@{() -> viewmodel.toggleMeasureUnit()}"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/measure_grams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_grams" />

            <RadioButton
                android:id="@+id/measure_ounces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_ounces" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>